--- a/selenium.csproj
+++ b/selenium.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="MSTest.TestFramework" Version="3.0.4" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.17.0"/>
+    <PackageReference Include="Selenium.Support" Version="4.17.0"/>
   </ItemGroup>
 <ItemGroup>
   <None Update="TestUpload.txt" CopyToOutputDirectory="PreserveNewest" />
